# BasealtTask

./: CMakeLists.txt  README  install.sh
Utility/: CMakeLists.txt  install.sh
Utility/include/: package.hpp
includes/: get.hpp
src/: get.cpp  main.cpp  package.cpp
